attempt to fix sidebar on mobile second try

--- a/src/styles/componentStyles/componentStyles.scss
+++ b/src/styles/componentStyles/componentStyles.scss
@@ -129,6 +129,10 @@
     .sidebar{
         margin-top: 53.69px;
     }
+
+    .sidebar.close{
+        opacity: 0;
+    }
 }
 /*
 @media screen and (max-width: 400px) {
